2005-04-04  John Levon  <levon@movementarian.org>

	* configure.in:
	* doc/Makefile.am:
	* doc/oprofile.xml:
	* doc/opstack.1.in:
	* doc/opreport.1.in:
	* doc/oprofile.1.in:
	* pp/.cvsignore:
	* pp/Makefile.am:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h:
	* pp/opstack.cpp:
	* pp/opstack_options.cpp:
	* pp/opstack_options.h: remove opstack in favour of opreport -c

	* libpp/callgraph_container.cpp: fix for new call-graph code

	* doc/oprofile.xml:
	* doc/oparchive.1.in: document -x, re-organise manual

2005-04-04 Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: further check for bfd synthesised
	  symbols support

2005-04-04  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.cpp:
	* libpp/callgraph_container.h:
	* libpp/format_flags.h:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/symbol.cpp:
	* libpp/symbol.h:
	* libpp/symbol_sort.cpp:
	* libpp/symbol_sort.h:
	* libutil++/op_bfd.cpp:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/opstack.cpp:
	* pp/opstack_options.cpp:
	* pp/opstack_options.h: re-whack call-graph collection
	  and output format

2005-04-03 Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: synthesis dotted symbols
	  if necessary

2005-03-31  John Levon  <levon@movementarian.org>

	* HACKING:
	* TODO:
	* configure.in:
	* doc/Makefile.am:
	* doc/op_help.1.in:
	* doc/ophelp.1.in:
	* doc/oprofile.xml:
	* libabi/.cvsignore:
	* libabi/Makefile.am:
	* libabi/opimport.cpp:
	* utils/.cvsignore:
	* utils/Makefile.am:
	* utils/opcontrol:
	* utils/ophelp.c: rename op_import->opimport,
	  op_help->ophelp. Allow normal user to use
	  opcontrol --list-events

2005-03-31  John Levon  <levon@movementarian.org>

	* doc/internals.xml: more internals docs

2005-03-29  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp:
	* libpp/format_output.h:
	* libpp/format_output.cpp: